--- a/.github/workflows/image-builder.yml
+++ b/.github/workflows/image-builder.yml
@@ -10,7 +10,7 @@ jobs:
         uses: hashicorp/vault-action@v2.4.0
         with:
           url: http://127.0.0.1:8200
-          tlsSkipVerify: true
+          #tlsSkipVerify: true
           token: ${{ secrets.VAULT_TOKEN }}
           secrets: |
             secret/data/ci app_secret
