--- a/.github/workflows/image-builder.yml
+++ b/.github/workflows/image-builder.yml
@@ -7,9 +7,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Import Secrets
-        uses: hashicorp/vault-action@v2.0.1/
+        uses: hashicorp/vault-action@v2.0.1
         with:
-          url: http://127.0.0.1:8200
+          url: http://127.0.0.1:8200/
           #tlsSkipVerify: true
           token: ${{ secrets.VAULT_TOKEN }}
           secrets: |
