--- a/.github/workflows/image-builder.yml
+++ b/.github/workflows/image-builder.yml
@@ -17,6 +17,6 @@ jobs:
       - name: Build Docker Image
         run: sudo docker build . --file Dockerfile --build-arg app_secret="\${{ env.APP_SECRET }}" -t vault-action-exampleapp
       - name: Build Docker Image
-        run: sudo docker run . --file Dockerfile --build-arg app_secret="\${{ env.APP_SECRET }}" -t vault-action-exampleapp
+        run: sudo docker run vault-action-exampleapp /bin/bash -c "cat ./app_secret"
 
 
